--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,9 @@
 }
 
 .main_window {
+  height: 85px;
   color: white;
-  padding: 100px 30px 10px 30px;
+  padding: 100px 30px 0px 30px;
   font-family: "San Francisco";
   font-weight: 300;
   text-align: end;
@@ -61,9 +62,18 @@
   border-radius: 50px;
 }
 
+.main_item-btn:hover {
+  background-color: #767474;
+  cursor: pointer;
+}
+
 .main_item-btn:nth-child(1) {
   background-color: #a6a9a6;
   color: black;
+}
+
+.main_item-btn:nth-child(1):hover {
+  background-color: #d6d7d6;
 }
 
 .main_item-btn:nth-child(2) {
@@ -71,9 +81,17 @@
   color: black;
 }
 
+.main_item-btn:nth-child(2):hover {
+  background-color: #d6d7d6;
+}
+
 .main_item-btn:nth-child(3) {
   background-color: #a6a9a6;
   color: black;
+}
+
+.main_item-btn:nth-child(3):hover {
+  background-color: #d6d7d6;
 }
 
 .main_item-btn:nth-child(4) {
@@ -81,9 +99,17 @@
   color: white;
 }
 
+.main_item-btn:nth-child(4):hover {
+  background-color: #f9b455;
+}
+
 .main_item-btn:nth-child(8) {
   background-color: #fe9603;
   color: white;
+}
+
+.main_item-btn:nth-child(8):hover {
+  background-color: #f9b455;
 }
 
 .main_item-btn:nth-child(12) {
@@ -91,13 +117,17 @@
   color: white;
 }
 
+.main_item-btn:nth-child(12):hover {
+  background-color: #f9b455;
+}
+
 .main_item-btn:nth-child(16) {
   background-color: #fe9603;
   color: white;
 }
 
-.main_item-btn:hover {
-  color: #767474;
+.main_item-btn:nth-child(16):hover {
+  background-color: #f9b455;
 }
 
 img {
